changed logic for file reading